a. Use Boolean/Integer.valueOf b. Use Map.Entry as iterator item c. Make sure all the stream objects are closed
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@955206 13f79535-47bb-0310-9956-ffa450edef68